[package]
name = "no-mans-sky"
version = "0.1.0"
authors = ["Jerry <calljerryli@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
ctrlc = { version = "3.2.1", features = ["termination"] }
