[package]
name = "no-mans-sky"
version = "0.2.0"
authors = ["github.com/jerryshell/no-mans-sky"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4.19"
ctrlc = { version = "3.2.1", features = ["termination"] }
clap = { version = "3.0.9", features = ["derive"] }
